# KittenTTS-flutter

./: .gitignore  AGENTS.md  API_GUIDELINES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle
doc/: README.md  development.md  getting-started.md  troubleshooting.md
doc/guides/: offline-assets.md  playback.md  word-timings.md
doc/reference/: api.md  models.md
doc/tutorials/: README.md
example/basic/: pubspec.yaml
example/basic/lib/: main.dart
example/basic/test/: widget_test.dart
example/basic/web/: index.html
example/word_timings/: pubspec.yaml
example/word_timings/lib/: main.dart
example/word_timings/web/: index.html
examples/: README.md
examples/basic/: README.md  pubspec.yaml
examples/word_timings/: README.md  pubspec.yaml
examples/word_timings/test/: widget_test.dart
ios/: kittentts.podspec  kittentts_flutter.podspec
ios/Classes/: kittentts_cephonemizer.cpp
lib/: kittentts.dart  kittentts_flutter_web.dart  kittentts_web.dart
lib/src/: kitten_model.dart  kitten_tts.dart  kitten_tts_config.dart  kitten_tts_error.dart  kitten_tts_result.dart  kitten_voice.dart  kitten_word_timing.dart
lib/src/analytics/: analytics_client.dart  analytics_platform.dart  (+2 more)
linux/: CMakeLists.txt
macos/: kittentts.podspec  kittentts_flutter.podspec
src/: CMakeLists.txt
src/cephonemizer/: swift_bridge.cpp
test/: analytics_test.dart  audio_and_timing_test.dart  playback_queue_test.dart
web/: kittentts_cephonemizer.js
windows/: CMakeLists.txt
(+42 files in other folders)
